fix insertion point wackiness due to not sending top-level window gecko activation events. Also some cleanup. b=334551 r=mento